src-tauri/crates/agent-core/src/tests/snapshots/agent_core__core__turn_executor__tests__assistant_all_fields.snap
---
source: crates/agent-core/src/core/turn_executor/../../tests/processor_tests.rs
assertion_line: 196
expression: "messages[0]"
---
_mc_ts: "[timestamp]"
content: text
reasoning_content: reason
role: assistant
tool_calls:
  - id: tc1
