src-tauri/crates/agent-core/src/tests/snapshots/agent_core__core__turn_executor__tests__assistant_with_reasoning.snap
---
source: crates/agent-core/src/core/turn_executor/../../tests/processor_tests.rs
assertion_line: 186
expression: "messages[0]"
---
_mc_ts: "[timestamp]"
content: ok
reasoning_content: thinking...
role: assistant
