src-tauri/crates/agent-core/src/tests/snapshots/agent_core__core__turn_executor__tests__assistant_with_tool_calls.snap
---
source: crates/agent-core/src/core/turn_executor/../../tests/processor_tests.rs
assertion_line: 177
expression: "messages[0]"
---
_mc_ts: "[timestamp]"
content: ~
role: assistant
tool_calls:
  - function:
      name: edit_file
    id: tc1
    type: function
