src-tauri/crates/agent-core/src/tests/snapshots/agent_core__core__turn_executor__tests__tool_result_format.snap
---
source: crates/agent-core/src/core/turn_executor/../../tests/processor_tests.rs
assertion_line: 213
expression: "messages[0]"
---
content: file contents here
name: read_file
role: tool
tool_call_id: tc-1
